--- a/app/views/person_widget/details.html.erb
+++ b/app/views/person_widget/details.html.erb
@@ -1,6 +1,8 @@
 <div class="details-view">
-  <h4>Person</h4>
-  <%= scrivito_edit_reference(widget, :person) %>
-  <h4>Show Picture?</h4>
-  <%= render partial: 'shared/toggle_buttons', locals: {obj: widget, attribute: "show_picture"} %>
+  <%= scrivito_details_for 'Person' do %>
+    <%= scrivito_edit_reference(widget, :person) %>
+  <% end %>
+  <%= scrivito_details_for 'Show Picture?' do %>
+    <%= render partial: 'shared/toggle_buttons', locals: {obj: widget, attribute: "show_picture"} %>
+  <% end %>
 </div>
