--- a/app/assets/stylesheets/application/app.scss
+++ b/app/assets/stylesheets/application/app.scss
@@ -176,6 +176,10 @@ ul {padding-left:20px;}
 .img-responsive.pull-left { margin:0 15px 25px 0;}
 .img-responsive.pull-right { margin:0 0 25px 15px;}
 
+img.shadow {
+  box-shadow: 0 0 3px rgba(0,0,0,0.5)
+}
+
 .margin_top { margin-top:20px;}
 .margin_bottom { margin-bottom:20px;}
 
