--- a/app/views/image_widget/details.html.erb
+++ b/app/views/image_widget/details.html.erb
@@ -1,21 +1,36 @@
 <div class="details-view">
-  <%= scrivito_details_for 'Image' do %>
-    <%= scrivito_image_tag widget, :image %>
-  <% end %>
+  <div class="row">
+    <div class="col-sm-5">
+      <%= scrivito_details_for 'Image' do %>
+        <%= scrivito_image_tag widget, :image %>
+      <% end %>
+    </div>
+    <div class="col-sm-7">
+      <%= scrivito_details_for 'Show shadow?' do %>
+        <%= scrivito_toggle_button_editor widget, :show_shadow %>
+      <% end %>
+    </div>
+  </div>
 
+  <hr>
   <%= scrivito_details_for 'Show Image in Gallery' do %>
     <%= render partial: 'shared/toggle_buttons', locals: {obj: widget, attribute: "show_in_lightbox"} %>
   <% end %>
 
-  <%= scrivito_details_for 'Lightbox Gallery Name' do %>
-    <div class="alert alert-info">
-      Only needed for more than one lightbox gallery per page, must begin with a hashtag: '#'
+  <div class="row">
+    <div class="col-sm-5">
+      <%= scrivito_details_for 'Large Version of Image' do %>
+        <div class="alert alert-info">If not set we use the image set above.</div>
+        <%= scrivito_edit_reference(widget, :lightbox_reference) %>
+      <% end %>
     </div>
-    <%= scrivito_tag(:span, widget, :lightbox_gallery_name) %>
-  <% end %>
-
-  <%= scrivito_details_for 'Large Version of Image' do %>
-    <div class="alert alert-info">If not set we will use the same image)</div>
-    <%= scrivito_edit_reference(widget, :lightbox_reference) %>
-  <% end %>
+    <div class="col-sm-7">
+      <%= scrivito_details_for 'Gallery Name' do %>
+        <div class="alert alert-info">
+          Only needed for more than one galleries per page. It must begin with a '#'
+        </div>
+        <%= scrivito_tag(:div, widget, :lightbox_gallery_name) %>
+      <% end %>
+    </div>
+  </div>
 </div>
