--- a/app/views/image_widget/show.html.erb
+++ b/app/views/image_widget/show.html.erb
@@ -1,7 +1,7 @@
-<% if scrivito_in_editable_view? || widget.show_in_lightbox != "yes" %>
-  <%= scrivito_image_tag widget, :image, class: "img-responsive" %>
+<% if scrivito_in_editable_view? || widget.show_in_lightbox != "Yes" %>
+  <%= scrivito_image_tag widget, :image, class: "img-responsive #{widget.show_shadow? ? 'shadow' : ''}" %>
 <% else %>
   <%= link_to(scrivito_path(widget.lightbox_ref), {:title => widget.image.title, data: {gallery:  widget.lightbox_gallery_name}}) do %>
-    <%= scrivito_image_tag widget, :image, class: "img-responsive" %>
+    <%= scrivito_image_tag widget, :image, class: "img-responsive #{widget.show_shadow? ? 'shadow' : ''}" %>
   <% end %>
 <% end %>
