--- a/app/views/homepage/details.html.erb
+++ b/app/views/homepage/details.html.erb
@@ -1,5 +1,5 @@
 <div class="details-view">
   <%= scrivito_details_for 'Title' do %>
-    <%= scrivito_tag(:span, @obj, :title) %>
+    <%= scrivito_tag(:div, @obj, :title) %>
   <% end %>
 </div>
