--- a/app/views/iframe_widget/details.html.erb
+++ b/app/views/iframe_widget/details.html.erb
@@ -4,10 +4,10 @@
   <% end %>
 
   <%= scrivito_details_for 'Width' do %>
-    <%= scrivito_tag(:span, widget, :width) %>
+    <%= scrivito_tag(:div, widget, :width) %>
   <% end %>
 
   <%= scrivito_details_for 'Height' do %>
-    <%= scrivito_tag(:span, widget, :height) %>
+    <%= scrivito_tag(:div, widget, :height) %>
   <% end %>
 </div>
