--- a/app/views/image/details.html.erb
+++ b/app/views/image/details.html.erb
@@ -1,9 +1,9 @@
 <div class="details-view">
   <%= scrivito_details_for 'Name' do %>
-    <%= scrivito_tag :span, @obj, :name %>
+    <%= scrivito_tag :div, @obj, :name %>
   <% end %>
 
   <%= scrivito_details_for 'Title' do %>
-    <%= scrivito_tag :span, @obj, :title %>
+    <%= scrivito_tag :div, @obj, :title %>
   <% end %>
 </div>
