--- a/app/views/page/details.html.erb
+++ b/app/views/page/details.html.erb
@@ -1,6 +1,6 @@
 <div class="details-view">
   <%= scrivito_details_for 'Title' do %>
-    <%= scrivito_tag :span, @obj, :title %>
+    <%= scrivito_tag :div, @obj, :title %>
   <% end %>
 
   <%= scrivito_details_for 'Header Image' do %>
