--- a/app/views/person/details.html.erb
+++ b/app/views/person/details.html.erb
@@ -1,6 +1,6 @@
 <div class="details-view">
   <%= scrivito_details_for 'Title & Name' do %>
-    <%= scrivito_tag :span, @obj, :title %>
+    <%= scrivito_tag :div, @obj, :title %>
   <% end %>
 
   <%= scrivito_details_for 'Is A Company?' do %>
@@ -8,26 +8,26 @@
   <% end %>
 
   <%= scrivito_details_for 'Function' do %>
-    <%= scrivito_tag :span, @obj, :function %>
+    <%= scrivito_tag :div, @obj, :function %>
   <% end %>
   <%= scrivito_details_for 'Telephone' do %>
-    <%= scrivito_tag :span, @obj, :telephone %>
+    <%= scrivito_tag :div, @obj, :telephone %>
   <% end %>
   <%= scrivito_details_for 'Mobile' do %>
-    <%= scrivito_tag :span, @obj, :mobile %>
+    <%= scrivito_tag :div, @obj, :mobile %>
   <% end %>
   <%= scrivito_details_for 'Email' do %>
-    <%= scrivito_tag :span, @obj, :email %>
+    <%= scrivito_tag :div, @obj, :email %>
   <% end %>
 
   <%= scrivito_details_for 'Street' do %>
-    <%= scrivito_tag :span, @obj, :street %>
+    <%= scrivito_tag :div, @obj, :street %>
   <% end %>
   <%= scrivito_details_for 'Postal (PLZ)' do %>
-    <%= scrivito_tag :span, @obj, :postal %>
+    <%= scrivito_tag :div, @obj, :postal %>
   <% end %>
   <%= scrivito_details_for 'Country' do %>
-    <%= scrivito_tag :span, @obj, :country %>
+    <%= scrivito_tag :div, @obj, :country %>
   <% end %>
 
   <%= scrivito_details_for 'Image' do %>
