Add Space Widget, Use transform in image widget, Widget page migration

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -19,5 +19,6 @@
  *= require scrivito_tabbed_content_widget
  *= require scrivito_accordion_widget
  *= require scrivito_slick_slider_widget
+ *= require scrivito_space_widget
  *= require_tree ./application
  */
