--- a/app/views/image_widget/_image.html.erb
+++ b/app/views/image_widget/_image.html.erb
@@ -1,1 +1,1 @@
-<%= scrivito_image_tag widget, :image, {class: "img-responsive #{widget.show_shadow? ? 'shadow' : ''}", srcset: srcset_for(widget.image)}, transform: {width: 970} %>
+<%= scrivito_image_tag widget, :image, {class: "img-responsive #{widget.show_shadow? ? 'shadow' : ''}"}, transform: {width: 970} %>
