--- a/app/assets/stylesheets/application/app.scss
+++ b/app/assets/stylesheets/application/app.scss
@@ -172,7 +172,7 @@ hr {
 
 ul {padding-left:20px;}
 
-.img-responsive { margin: 0 0 25px 0;}
+.img-responsive { margin: 0 0 25px 0; width: 100%;}
 .img-responsive.pull-left { margin:0 15px 25px 0;}
 .img-responsive.pull-right { margin:0 0 25px 15px;}
 
@@ -640,87 +640,6 @@ img.shadow {
 
 .footer .adress {line-height:16px; font-size:10px; color: #ccc; font-weight: 200; margin:0; text-align:left;}
 .footer .logo {background: image_url('scriv-uno/logo_sw.svg') no-repeat center; display:block; width:110px; height:40px; margin-left:-10px;}
-
-
-/* slick-slider
-================================================== */
-
-.slick-slider { position: relative; display: block; padding:0 20px; box-sizing: border-box;
-  -moz-box-sizing: border-box; -webkit-touch-callout: none;
-  -webkit-user-select: none; -khtml-user-select: none;
-  -moz-user-select: none; -ms-user-select: none;
-  user-select: none; -ms-touch-action: none;
-  -webkit-tap-highlight-color: transparent;
-  }
-
-.slick-list { position: relative; overflow: hidden; display: block; margin: 0; padding: 0; }
-.slick-list:focus { outline: none; }
-.slick-loading .slick-list { background: white image_url('ajax-loader.gif') center center no-repeat; }
-.slick-list.dragging { cursor: pointer; cursor: hand; }
-
-.slick-slider .slick-list, .slick-track, .slick-slide, .slick-slide img {
-  -webkit-transform: translate3d(0, 0, 0); -moz-transform: translate3d(0, 0, 0);
-  -ms-transform: translate3d(0, 0, 0); -o-transform: translate3d(0, 0, 0);
-  transform: translate3d(0, 0, 0);
-  }
-
-.slick-track { position: relative; left: 0; top: 0; display: block; zoom: 1; }
-.slick-track:before, .slick-track:after { content: ""; display: table; }
-.slick-track:after { clear: both; }
-.slick-loading .slick-track { visibility: hidden; }
-
-.slick-slide { float: left; height: 100%; min-height: 1px; display: none; }
-.slick-slide img { display: block; width:100px; height:100px; border-radius:50px; overflow:hidden; margin:0 auto;}
-.slick-slide.slick-loading img { display: none; }
-.slick-slide.dragging img { pointer-events: none; }
-.slick-initialized .slick-slide { display: block; }
-.slick-loading .slick-slide { visibility: hidden; }
-.slick-vertical .slick-slide { display: block; height: auto; border: 1px solid transparent; }
-
-/* Arrows */
-.slick-prev, .slick-next { position: absolute; display: block; height: 40px; width: 40px;
-  line-height: 40px; font-size: 0; cursor: pointer; background: transparent;
-  color: transparent; top: 50%; margin-top: -10px; padding: 0; border: none; outline: none;
-  }
-.slick-prev:hover, .slick-prev:focus, .slick-next:hover, .slick-next:focus { outline: none; background: transparent; color: transparent; }
-.slick-prev:hover:before, .slick-prev:focus:before, .slick-next:hover:before, .slick-next:focus:before { opacity: 1; }
-.slick-prev.slick-disabled:before, .slick-next.slick-disabled:before { opacity: 0.25; }
-
-.slick-prev:before, .slick-next:before {
-  font-family: "foundation_icons_general_enclosed";
-  font-weight: normal;
-  font-style: normal;
-  text-decoration: inherit; color:#aaa;
-  font-size:33px; line-height: 1; opacity: 0.5; text-align:center;
-  vertical-align: middle; line-height: inherit;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  }
-
-.slick-prev { left: -5px; }
-.slick-prev:before { content: "\f015"; }
-
-.slick-next { right: -5px; }
-.slick-next:before { content: "\f014"; }
-
-/* Dots */
-.slick-slider { margin-bottom: 20px; }
-
-.slick-dots { position: absolute; bottom: -45px; list-style: none; display: block; text-align: center; padding: 0; width: 100%; }
-.slick-dots li { position: relative; display: inline-block; height: 20px; width: 20px; margin: 0 5px; padding: 0; cursor: pointer; }
-.slick-dots li button { border: 0; background: #fff; display: block;
-  height: 7px; width: 7px; outline: none; line-height: 0;
-  font-size: 0; color: transparent; padding: 0; cursor: pointer;
-  border-radius:50%;
-  }
-.slick-dots li button:hover, .slick-dots li button:focus { outline: none; }
-.slick-dots li button:hover:before, .slick-dots li button:focus:before { opacity: 1; }
-.slick-dots li button:before { position: absolute; top: 0; left: 0; content: ""; width: 20px; height: 20px;
- font-size: 6px; line-height: 20px; text-align: center; color: black; opacity: 0.25; }
-.slick-dots li.slick-active button { background: #9ec7ac; }
-
-.slider.our_business .h4 { text-align:center;}
-
 
 /* blog
 ================================================== */
