--- a/app/assets/stylesheets/application/app.scss
+++ b/app/assets/stylesheets/application/app.scss
@@ -177,7 +177,11 @@ ul {padding-left:20px;}
 .img-responsive.pull-right { margin:0 0 25px 15px;}
 
 img.shadow {
-  box-shadow: 0 0 3px rgba(0,0,0,0.5)
+  box-shadow: 0 0 3px rgba(0,0,0,0.5);
+}
+
+.drop_shadow {
+  box-shadow: 0 0 3px rgba(0,0,0,0.5);
 }
 
 .margin_top { margin-top:20px;}
