Login page heading, Readme for login

--- a/app/views/login_page/_login_page.html.erb
+++ b/app/views/login_page/_login_page.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3">
       <div class="panel panel-default drop_shadow">
-        <div class="panel-heading">Logout</div>
+        <div class="panel-heading"><h3 class="panel-title">Login</h3></div>
         <div class="panel-body">
           <div class="alert alert-info">
             Use <span class="badge">login</span> as user and <span class="badge">password</span> as password.
