--- a/app/views/login_page/_logout_page.html.erb
+++ b/app/views/login_page/_logout_page.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3">
       <div class="panel panel-default drop_shadow">
-        <div class="panel-heading">Logout</div>
+        <div class="panel-heading"><h3 class="panel-title">Logout</h3></div>
         <div class="panel-body text-center">
           <%= link_to(session_path, method: :delete, class: 'btn btn-primary') do %>
             Logout
