--- a/app/views/shared/_flap.html.erb
+++ b/app/views/shared/_flap.html.erb
@@ -26,7 +26,7 @@
         <% if not logged_in? %>
           <%= form_tag session_path, role: 'form' do %>
             <div class="form-group">
-              <%= text_field_tag :login, 'demo', class: 'form-control', placeholder: 'Enter login' %>
+              <%= text_field_tag :login, 'login', class: 'form-control', placeholder: 'Enter login' %>
             </div>
             <div class="form-group">
               <%= password_field_tag :password, '', class: 'form-control', placeholder: 'Enter password' %>
