Stylings for accordion and tab

--- a/app/assets/stylesheets/application/colors.css.scss
+++ b/app/assets/stylesheets/application/colors.css.scss
@@ -25,14 +25,18 @@
   background: #78c9a6 !important;
   color: #fff;
 }
-.bg_green * { color: #fff; }
+a.bg_green,
+.panel-heading.bg_green { color: #fff !important; }
+.bg_green * { color: #fff; &:hover, &:active, &:focus {color: #fff;} }
 
 .bg_blue {
   border-color: #465b66;
   background: #465b66 !important;
   color: #eee;
 }
-.bg_blue * { color:#eee; }
+a.bg_blue,
+.panel-heading.bg_blue { color: #eee !important; }
+.bg_blue * { color:#eee; &:hover, &:active, &:focus {color: #eee;} }
 .bg_blue .headline { border-bottom:none; }
 
 
