--- a/app/assets/stylesheets/application/app.scss
+++ b/app/assets/stylesheets/application/app.scss
@@ -253,27 +253,34 @@ img.shadow {
 /* panel
 ================================================== */
 
-.panel-group {  box-shadow: 0 0 3px rgba(0, 0, 0, 0.25);}
-.panel-group .panel { border-radius:0px;}
-.panel-default > .panel-heading { border:0px; background:#fafafa;}
+.panel-group .panel { box-shadow: 0 0 3px rgba(0, 0, 0, 0.25); border-radius: 5px; margin-bottom: 10px; overflow: hidden; }
+.panel-group .panel-default > .panel-heading { border:0px; background:#fafafa; border-radius: 0px; color: #465b66; padding: 0; }
 .panel-group .panel + .panel {  margin-top: -1px; }
 .panel-default { border:0px;}
-
+.panel-default .panel-title { color: inherit; }
 .panel-default > .panel-heading + .panel-collapse > .panel-body {
     border-top: 0px;
 }
-.panel-title > a { color: #465b66;}
-
+.panel-title > a { padding: 10px 15px; display: block; }
 
 /* nav-tabs
 ================================================== */
+.nav-tabs { border: 0px; }
+.nav-tabs > li { margin: 0 }
+.nav-tabs > li > a { border: 0px; border-radius: 0px; }
 
-.nav-tabs { border-bottom:2px solid #ddd; margin:10px 0;}
-.nav-tabs > li { margin: 0; }
-.nav-tabs > li > a { border-radius:0; border:0px; background:transparent; font-size:16px;}
+.nav-tabs > li.active > a { box-shadow: -2px -2px 5px -2px rgba(0, 0, 0, 0.1), 2px -2px 5px -2px rgba(0, 0, 0, 0.1); }
+
 .nav-tabs > li.active > a,
 .nav-tabs > li.active > a:hover,
-.nav-tabs > li.active > a:focus { background:#eee; border:0px; margin:0;}
+.nav-tabs > li.active > a:active,
+.nav-tabs > li.active > a:focus { border: 0px; border-radius: 0px; background-color: #eee; }
+
+.tab-content { box-shadow: 0 0 5px rgba(0, 0, 0, 0.1); }
+
+.tab-content .tab-pane {
+  padding: 10px;
+}
 
 /* quote
 ================================================== */
