--- a/app/assets/stylesheets/application/app.scss
+++ b/app/assets/stylesheets/application/app.scss
@@ -279,7 +279,7 @@ img.shadow {
 .tab-content { box-shadow: 0 0 5px rgba(0, 0, 0, 0.1); }
 
 .tab-content .tab-pane {
-  padding: 10px;
+  padding: 10px 15px;
 }
 
 /* quote
