--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0,user-scalable=0, minimal-ui">
   <link rel="apple-touch-icon-precomposed" href="<%= asset_path('apple-touch-icon-precomposed') %>">
-  <link rel="shortcut icon" href="<%= asset_path('favicon') %>">
+  <link rel="shortcut icon" href="<%= asset_path('favicon.ico') %>">
 
   <!-- stylesheets -->
   <%= stylesheet_link_tag    'application', media: 'all' %>
@@ -27,7 +27,7 @@
 
   <!-- Favicons -->
   <link rel="apple-touch-icon-precomposed" href="/apple-touch-icon-precomposed.png">
-  <link rel="icon" href="/favicon.ico">
+  <link rel="icon" href="<%= asset_path('favicon.ico') %>">
 
 </head>
 <body>
