--- a/app/assets/stylesheets/application/app.scss
+++ b/app/assets/stylesheets/application/app.scss
@@ -213,7 +213,10 @@ img.shadow {
 .nav > li > a:focus,
 .nav > li.active > a { background:#f3f3f3; }
 
-.nav > li:hover .dropdown-menu { display:block; position: absolute;}
+.nav > li:hover .dropdown-menu { display:block; position: absolute; }
+@media (max-width: 800px) {
+  .nav > li:hover .dropdown-menu { position: static; }
+}
 
 .navbar-nav > li > a { font-size:15px; font-family: 'Signika', sans-serif; font-weight:400; padding:20px 12px; color:#666;}
 .navbar-nav.navbar-right > li > a { font-size:13px; padding:20px 10px;}
@@ -794,6 +797,7 @@ footer .logo { float:none; margin:40px 0 20px 0; text-align:left;}
 footer .adress { text-align:left;}
 footer .copyright { padding: 20px 0 0 0;}
 
+.slick-dots { left: 0; }
 
 .navbar-toggle { background:#eee; border-radius:0;}
 .navbar-toggle.collapsed { background:#fff;}
