--- a/app/assets/stylesheets/application/app.scss
+++ b/app/assets/stylesheets/application/app.scss
@@ -257,7 +257,7 @@ img.shadow {
 ================================================== */
 
 .panel-group .panel { box-shadow: 0 0 3px rgba(0, 0, 0, 0.25); border-radius: 5px; margin-bottom: 10px; overflow: hidden; }
-.panel-group .panel-default > .panel-heading { border:0px; background:#fafafa; border-radius: 0px; color: #465b66; padding: 0; }
+.panel-group .panel-default > .panel-heading { border:0px; background:#f3f3f3; border-radius: 0px; color: #465b66; padding: 0; }
 .panel-group .panel + .panel {  margin-top: -1px; }
 .panel-default { border:0px;}
 .panel-default .panel-title { color: inherit; }
@@ -272,18 +272,15 @@ img.shadow {
 .nav-tabs > li { margin: 0 }
 .nav-tabs > li > a { border: 0px; border-radius: 0px; }
 
-.nav-tabs > li.active > a { box-shadow: -2px -2px 5px -2px rgba(0, 0, 0, 0.1), 2px -2px 5px -2px rgba(0, 0, 0, 0.1); }
+.nav-tabs > li.active > a { border: 0px; border-radius: 0px; box-shadow: -2px -2px 5px -2px rgba(0, 0, 0, 0.1), 2px -2px 5px -2px rgba(0, 0, 0, 0.1); background-color: white; }
 
-.nav-tabs > li.active > a,
-.nav-tabs > li.active > a:hover,
 .nav-tabs > li.active > a:active,
-.nav-tabs > li.active > a:focus { border: 0px; border-radius: 0px; background-color: #eee; }
+.nav-tabs > li.active > a:focus { background-color: white; border: 0px; border-radius: 0px; }
+.nav-tabs > li.active > a:hover { border: 0px; border-radius: 0px; background-color: #f3f3f3; }
 
 .tab-content { box-shadow: 0 0 5px rgba(0, 0, 0, 0.1); }
 
-.tab-content .tab-pane {
-  padding: 10px 15px;
-}
+.tab-content .tab-pane { padding: 10px 15px; }
 
 /* quote
 ================================================== */
