Add Seo Page Extender

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -18,5 +18,6 @@
  *= require scrivito_video_widget
  *= require scrivito_slick_slider_widget
  *= require scrivito_space_widget
+ *= require scrivito_seo_page_extender
  *= require_tree ./application
  */
