--- a/app/assets/stylesheets/editing/button_editor.css
+++ b/app/assets/stylesheets/editing/button_editor.css
@@ -1,3 +1,7 @@
 /* details-view */
 .details-view input.button_editor {padding: 20px;}
 .details-view input.button_editor.active {border: medium inset grey;}
+
+.tag-editor .tag-editor-delete i:before {
+  content: '';
+}
