--- a/app/views/page/details.html.erb
+++ b/app/views/page/details.html.erb
@@ -1,17 +1,43 @@
-<div class="details-view">
-  <%= scrivito_details_for 'Title' do %>
-    <%= scrivito_tag :div, @obj, :title %>
-  <% end %>
+<%= scrivito_large_dialog do %>
+  <ul class="tab-list">
+    <li class="active" data-panel-target="#edit-general">General</li>
+    <li data-panel-target="#edit-open-graph">Open Graph</li>
+    <li data-panel-target="#edit-twitter">Twitter Cards</li>
+    <li data-panel-target="#edit-system-data">System Data</li>
+  </ul>
 
-  <%= scrivito_details_for 'Header Image' do %>
-    <%= scrivito_image_tag(@obj, :header_image) %>
-  <% end %>
+  <div class="tab-panels">
+    <div class="tab-panel" id="edit-general">
+      <%= scrivito_details_for 'Title' do %>
+        <%= scrivito_tag :div, @obj, :title %>
+      <% end %>
 
-  <%= scrivito_details_for 'Header Icon' do %>
-    <%= render 'icon_box_widget/partials/icons_picker', widget: @obj, attribute: :icon %>
-  <% end %>
+      <%= scrivito_details_for 'Header Image' do %>
+        <%= scrivito_image_tag(@obj, :header_image, {style: 'width: 300px'}, transform: {width: "300px"}) %>
+      <% end %>
 
-  <%= scrivito_details_for 'Show in Navigation?' do %>
-    <%= render partial: 'shared/toggle_buttons', locals: {obj: @obj, attribute: "show_in_navigation"} %>
-  <% end %>
-</div>
+      <%= scrivito_details_for 'Header Icon' do %>
+        <%= render 'icon_box_widget/partials/icons_picker', widget: @obj, attribute: :icon %>
+      <% end %>
+
+      <%= scrivito_details_for 'Show in Navigation?' do %>
+        <%= render partial: 'shared/toggle_buttons', locals: {obj: @obj, attribute: "show_in_navigation"} %>
+      <% end %>
+
+      <%= render 'seo_page_extender/sitemap_details', obj: @obj %>
+    </div>
+
+    <div class="tab-panel" id="edit-open-graph">
+      <%= render 'seo_page_extender/open_graph_details', obj: @obj %>
+    </div>
+
+    <div class="tab-panel" id="edit-twitter">
+      <%= render 'seo_page_extender/twitter_cards_details', obj: @obj %>
+    </div>
+
+    <div class="tab-panel" id="edit-system-data">
+      <%= render 'shared/object_data', obj: @obj %>
+      <%= render 'seo_page_extender/edit_permalink', obj: @obj %>
+    </div>
+  </div>
+<% end %>
