--- a/app/views/person_widget/show.html.erb
+++ b/app/views/person_widget/show.html.erb
@@ -33,7 +33,7 @@
   </div>
 <% else %>
   <% if scrivito_in_editable_view? %>
-    <%= scrivito_edit_reference(widget, :person) %>
+    <%= scrivito_tag(:div, widget, :person) %>
   <% end %>
 <% end %>
 
