--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -19,5 +19,6 @@
  *= require scrivito_slick_slider_widget
  *= require scrivito_space_widget
  *= require scrivito_seo_page_extender
+ *= require scrivito_table_widget
  *= require_tree ./application
  */
