--- a/app/assets/stylesheets/application/app.scss
+++ b/app/assets/stylesheets/application/app.scss
@@ -302,10 +302,22 @@ img.shadow {
 .carousel-control i {font-size:33px!important; line-height:400px; color:rgba(0,0,0,.6); text-shadow:0 0 3px rgba(255,255,255,.4); padding:0;}
 
 .carousel-caption h1,
-.carousel-caption .h1 { font-size:50px; line-height:1.5em; color:#fff;
-  background:rgba(0,0,0,.3); padding: 5px 20px; margin:0;
-  display:block; float:left;
+.carousel-caption h2,
+.carousel-caption h3,
+.carousel-caption h4,
+.carousel-caption h5,
+.carousel-caption h6,
+.carousel-caption .h1,
+.carousel-caption .h2,
+.carousel-caption .h3,
+.carousel-caption .h4,
+.carousel-caption .h5,
+.carousel-caption .h6 { color:#fff; padding: 0; margin:0;
+  display:block; border: none !important;
   }
+.carousel-caption .headline {
+  border: none;
+}
 .carousel-caption .content { background:rgba(0,0,0,.4);
   padding: 5px 20px 10px 20px; margin: 0 0 20px 0;
   max-width:800px; rdisplay:block; float:left; text-align:left;
