--- a/app/views/homepage/details.html.erb
+++ b/app/views/homepage/details.html.erb
@@ -30,7 +30,9 @@
 
     <div class="tab-panel" id="edit-system-data">
       <%= render 'shared/object_data', obj: @obj %>
-      <%= render 'seo_page_extender/edit_permalink', obj: @obj %>
+      <%= scrivito_details_for 'Permalink' do %>
+        <%= scrivito_tag :div, @obj, :_permalink %>
+      <% end %>
     </div>
   </div>
 <% end %>
