--- a/app/views/page/details.html.erb
+++ b/app/views/page/details.html.erb
@@ -17,7 +17,7 @@
       <% end %>
 
       <%= scrivito_details_for 'Header Icon' do %>
-        <%= render 'icon_box_widget/partials/icons_picker', widget: @obj, attribute: :icon %>
+        <%#= render 'icon_box_widget/partials/icons_picker', widget: @obj, attribute: :icon %>
       <% end %>
 
       <%= scrivito_details_for 'Show in Navigation?' do %>
@@ -37,7 +37,9 @@
 
     <div class="tab-panel" id="edit-system-data">
       <%= render 'shared/object_data', obj: @obj %>
-      <%= render 'seo_page_extender/edit_permalink', obj: @obj %>
+      <%= scrivito_details_for 'Permalink' do %>
+        <%= scrivito_tag :div, @obj, :_permalink %>
+      <% end %>
     </div>
   </div>
 <% end %>
