--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -51,7 +51,7 @@
   <%= yield %>
 
   <%= render 'shared/footer' %>
-  <%= render 'shared/flap' %>
+  <%#= render 'shared/flap' %>
 
 <% if scrivito_user %>
   <%= javascript_include_tag 'editing' %>
